collapse fixes

--- a/src/app/content-blocks/block-collapse/block-collapse.component.scss
+++ b/src/app/content-blocks/block-collapse/block-collapse.component.scss
@@ -14,7 +14,7 @@
   h2 {
     padding-left: 50px;
 
-    &:before {
+    &::before {
       border: 0;
     }
   }
